--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <section id="navbar">
                 <div class="navbar-part">
                     <div class="Logo">
-                         <a href="/"><img src="images/logo.png" alt="Logo-image"/></a>
+                         <a href="/"><img class="image1" src="images/logo.png" alt="Logo-image"/></a>
                     </div>
                     <div>
                     <ul class="list1">
@@ -31,15 +31,89 @@
         <section id="navbar2">
             <div class="navbar-part2">
                 <div class="text1">
-                     <p> Have a project in mind? We would love to hear from you!</p>
+                     <p class="textstyle"> Have a project in mind? We would love to hear from you!</p>
                 </div>
-                <div>
-                <button>GET IN TOUCH WITH US</button> 
+                <div class="buttonout">
+                    <button type="submit" class="buttonbar">GET IN TOUCH WITH US</button> 
                 </div>
             </div>
         </section>
 
-    </section>
+        <section id="sepration">
+            <div class="section">
+                <div class="text5">
+                    <p class="text2"><strong>We are ARK Studio, we make awesome stuff.</strong></p>
+                </div>
+                <div class="cutter">
+                    <img  src="images/separator.png" alt="separator"/>
+                </div>
+                <div class="column">
+                    <div>  
+                        <div class="part1">
+                            <img  src="images/s1.png" alt="s1"/>
+                        </div>
+                            <p class="slogen1"><strong> Slamco laboris velitesse</strong></p>
+                            <p class="tag1">sed do eiusmod tempor incididunt uto<br/> labore dolore magna aliqua enim minim<br/> veniam.</p>
+                    </div>
+                    <div>
+                        <div class="part2">
+                            <img src="images/s2.png" alt="s2"/>
+                        </div>
+                            <p class="slogen2"><strong>Slamco laboris velitesse</strong></p>
+                            <p class="tag2">sed do eiusmod tempor incididunt uto<br/> labore dolore magna aliqua enim minim<br/> veniam.</p>
+                        </div>
+                    <div>
+                        <div class="part3">
+                            <img src="images/s3.png" alt="s3"/>
+                        </div>
+                            <p class="slogen3"><strong>Slamco laboris velitesse</strong></p>
+                            <p class="tag3">sed do eiusmod tempor incididunt uto<br/> labore dolore magna aliqua enim minim<br/> veniam.</p>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
+        <section id="gallery">
+            <div class="photos">
+                <img class="items" src="images/w1.jpg" alt="galleryphoto"/>
+                <img class="items" src="images/w3.jpg" alt="galleryphoto"/>
+                <img class="items" src="images/w4.jpg" alt="galleryphoto"/>
+                <img class="items" src="images/w5.jpg" alt="galleryphoto"/>
+            </div>
+        </section>
+        <section id="author">
+            <div class="author1">
+                <div class="boom">
+                    <p class="boom1"><strong> TESTIMONIALS</strong></p>
+                </div>
+                <div class="actor-contain">
+                    <div>  
+                        <div class="photo1">
+                            <img  src="images/client1.jpg" alt="s1"/>
+                        </div>
+                            <p class="work"><strong> John Doe</strong>/ Manager</p>
+                            <p class="ppt">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur sint occaecat cupidatat.</p>
+                    </div>
+                    <div>
+                        <div class="photo2">
+                            <img src="images/client2.jpg" alt="s2"/>
+                        </div>
+                            <p class="work2"><strong> John Doe</strong>/ UI Designer</p>
+                            <p class="ppt2">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur sint occaecat cupidatat.</p>
+                        </div>
+                    <div>
+                        <div class="photo3">
+                            <img src="images/client3.jpg" alt="s3"/>
+                        </div>
+                            <p class="work3"><strong> John Doe</strong>/ SCO Expert</p>
+                            <p class="ppt3">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur sint occaecat cupidatat.</p>
+                    </div>
+                </div>
+                
+            </div>
+        </section>
 
+
+    </section>
 </body>
 </html>
