--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                     <div>
                     <ul class="list1">
                         <li><a href="/" class="links">Home</a></li>
-                        <li><a href="#about" class="links">About</a></li>
+                        <li><a href="#sepration" class="links">About</a></li>
                         <li><a href="#gallery" class="links">Gallery</a></li>
-                        <li><a href="#contact" class="links">Contact</a></li>
+                        <li><a href="#author" class="links">Contact</a></li>
                     </ul>
                     </div>
                 </div>
@@ -70,7 +70,6 @@
                             <p class="tag3">sed do eiusmod tempor incididunt uto<br/> labore dolore magna aliqua enim minim<br/> veniam.</p>
                     </div>
                 </div>
-                
             </div>
         </section>
         <section id="gallery">
@@ -89,31 +88,82 @@
                 <div class="actor-contain">
                     <div>  
                         <div class="photo1">
-                            <img  src="images/client1.jpg" alt="s1"/>
+                            <img class="round"  src="images/client1.jpg" alt="s1"/>
                         </div>
                             <p class="work"><strong> John Doe</strong>/ Manager</p>
                             <p class="ppt">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur sint occaecat cupidatat.</p>
                     </div>
                     <div>
                         <div class="photo2">
-                            <img src="images/client2.jpg" alt="s2"/>
+                            <img class="round1" src="images/client2.jpg" alt="s2"/>
                         </div>
-                            <p class="work2"><strong> John Doe</strong>/ UI Designer</p>
-                            <p class="ppt2">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur sint occaecat cupidatat.</p>
-                        </div>
+                            <p class="work"><strong> John Doe</strong>/ UI Designer</p>
+                            <p class="ppt">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur sint occaecat cupidatat.</p>
+                    </div>
                     <div>
                         <div class="photo3">
-                            <img src="images/client3.jpg" alt="s3"/>
+                            <img class="round" src="images/client3.jpg" alt="s3"/>
                         </div>
-                            <p class="work3"><strong> John Doe</strong>/ SCO Expert</p>
-                            <p class="ppt3">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur sint occaecat cupidatat.</p>
+                            <p class="work"><strong> John Doe</strong>/ SCO Expert</p>
+                            <p class="ppt">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur sint occaecat cupidatat.</p>
                     </div>
                 </div>
-                
             </div>
         </section>
-
-
+        <section id="brand">
+            <div class="repeat">
+                <img class="logic" src="images/client_logo.png" alt="brandlogo"/>
+                <img class="logic" src="images/client_logo.png" alt="brandlogo"/>
+                <img class="logic" src="images/client_logo.png" alt="brandlogo"/>
+                <img class="logic" src="images/client_logo.png" alt="brandlogo"/>
+                <img class="logic" src="images/client_logo.png" alt="brandlogo"/>
+            </div>
+        </section>
+        <section id="box">
+            <div class="box1">
+                <div class="box2">
+                    <div class="bigbox">
+                        <p>Have a project in mind ? we would love to hear from you!</p>
+                    </div>
+                    <div class="button">
+                        <button class="buttonbar" type="submit">Get in touch with us</button>
+                    </div>
+                </div>
+            </div>
+            <div class="hand11">
+                <div class="fingar1">
+                    <div class="f2">
+                        <h3 class="bill">Location</h3>
+                        <p class="app">3301 New Mexico Avenue<br/>Washington,DC 20016<br/>(202)537-0787</p>
+                        <img class="call" src="images/social.png" alt="social.png"/>
+                    </div>
+                    <div class="f2">
+                        <h3 class="f3">Company</h3>
+                        <ul class="list2">
+                            <li class="up1">Our story</li>
+                            <li class="up1">Mission</li>
+                            <li class="up1">Journal</li>
+                            <li class="up1">Contact</li>
+                        </ul>
+                    </div>
+                    <div class="f2">
+                       <h3 class="f3">Support</h3>
+                       <ul class="list2">
+                        <li class="up1">FAQ</li>
+                        <li class="up1">Contact Us</li>
+                        <li class="up1">Policies</li>
+                       </ul> 
+                    </div>
+                    <div class="f2">
+                       <h3 class="bill">ARK Studio</h3> 
+                       <p class="app">Excepteur sint occaecat cupidatat<br/> non proident, sunt in culpa qui<br/> officia est eserunt mollit anim<br/> laborum.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="MY">
+                <p>&copy; 2023 ARK Studio - All Rights Reserved | Designed by YASHWANT DEVARKAR</p>
+            </div>
+        </section>
     </section>
 </body>
 </html>
